grub2 (1.99-19) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Add grub-probe to grub-mount-udeb (LP: #963471).
  * Backport from upstream:
    - Avoid EFI boot services when loading Linux.

  [ Debconf translations ]
  * Croatian (Tomislav Krznar).

 -- Christian Perrier <bubulle@debian.org>  Sat, 24 Mar 2012 07:58:33 +0100

grub2 (1.99-18) unstable; urgency=low

  [ Colin Watson ]
  * Ensure that /sbin and /usr/sbin are in $PATH when running tests (closes:
    #662916).
  * mkconfig_loopback.patch: Use different GRUB loop devices for different
    OS loop devices (thanks, bcbc; LP: #888281).
  * Backport from upstream:
    - Add support for LZO compression in btrfs (LP: #727535).
    - Fix efiemu configure check.

  [ Ilya Yanok ]
  * Backport from upstream:
    - Make FAT UUID uppercase to match Linux (LP: #948716).

  [ Debconf translations ]
  * Norwegian Bokmål (Hans Fredrik Nordhaug). 
  * Gujarati (Kartik Mistry).  Closes: #663542

 -- Colin Watson <cjwatson@debian.org>  Mon, 19 Mar 2012 18:24:33 +0000

grub2 (1.99-17) unstable; urgency=low

  * efi_disk_cache.patch: Fix incorrect GRUB_DISK_CACHE_BITS (LP: #944347).

 -- Colin Watson <cjwatson@debian.org>  Tue, 06 Mar 2012 17:43:42 +0000

grub2 (1.99-16) unstable; urgency=low

  * Backport from upstream:
    - Build with -fno-asynchronous-unwind-tables to save space (closes:
      #662787).

 -- Colin Watson <cjwatson@debian.org>  Tue, 06 Mar 2012 12:45:42 +0000

grub2 (1.99-15) unstable; urgency=low

  [ Adam Conrad ]
  * grub.cfg_400.patch: Redirect grep stdout to /dev/null since
    grub-mkconfig is "exec > grub.cfg.new", which causes grep's input
    and output to be the same FD (LP: #934269) (closes: #652972)
  * efi_disk_cache.patch: Bump the disk cache on EFI systems to
    dramatically reduce load times for vmlinux/initrd (LP: #944347)

  [ Colin Watson ]
  * no_libzfs.patch: Use xasprintf rather than asprintf.
  * Backport from upstream: